--- a/deck.html
+++ b/deck.html
@@ -7,48 +7,34 @@
   <style>
 
     body {
-      background-color: #0b032d;
-      color: #ffb997;
       margin: 10px;
-    }
-
-    span.label {
-      margin: 3px;
-      background-color: #ffb997;
-      color: #0b032d;
-    }
-    span.label-danger {
-      margin: 3px;
-      background-color: #843b62;
     }
 
     input.card {
       width: 5em;
       margin: 2px;
-      color: #ffb997;
-      background-color: #74546a;
-      border: none;
+      background: #eee;
+      color: #366354;
+      border-radius: 4px;
+      border: 1px solid #E1E1E8;
+      font-family: "ubuntu mono";
     }
     input.card[huge="1"] {
       width: 12em
     }
     input.card:focus {
-      color: #ffb997;
     }
     input.card:focus[valid] {
       color: #0b032d;
     }
     input.card[valid="0"] {
-      background-color: #ffb997;
+      background-color: #eef;
       color: #0b032d;
     }
     input.card[valid="1"] {
-      background-color: #843b62;
+      background-color: #efe;
     }
     input.btn {
-      color: #0b032d;
-    }
-    button.btn {
       color: #0b032d;
     }
 
